# django-spectre-css

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
django-spectre-css/templates/spectre-css/: form.html  generic-field.html  multi-field-input-grup.html  render-form-checkbox.html  render-form-field.html  render-form-radio.html  render-form-textarea.html  render-multi-field-part.html  render-multi-field.html  render-multi-fild-part.html  render_errors.html
django-spectre-css/templatetags/: spectre_css.py  widget_tweaks_extras.py
django_spectre_css/templates/spectre-css/: form-header.html  render-form-checkbox.html  render-form-field.html  render-multi-field.html
django_spectre_css/templatetags/: spectre_css.py
