[project]
name = "django-spectre-css"
version = "0.3.dev2"
description = "Spectre CSS for Django"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Nils Rokita", email="github@rokita.it" },
]
keywords = ["spectre-css", "Django"]
classifiers=[
        'Development Status :: 3 - Alpha',
        'Environment :: Web Environment',
        'Programming Language :: Python',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: Implementation :: PyPy',
        'Programming Language :: Python :: Implementation :: CPython',
        'Framework :: Django',
    ]

dependencies = [
    "django>=2.0",
    "django-widget-tweaks>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "django_spectre_css/",
    "LICENSE",
    "README.md",
    "pyproject.toml"
]

[dependency-groups]
dev = [
    "ruff>=0.0.17",
]

[tool.ruff]
line-length = 100
